--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Webview</title>
+    <meta charset="UTF-8">
+    <title>Pupil Editor</title>
   </head>
   <body>
     <div id="root"></div>
