Ya se puede activar/desactivar el RadialKeyboard

--- a/speech-web/index.html
+++ b/speech-web/index.html
@@ -16,9 +16,23 @@
 		<div class="main-content">
 			<div class="left-panel">
 				<h2>¿Por qué necesito tener esta página abierta?</h2>
-				<p>Esta página web es necesaria para habilitar la funcionalidad de reconocimiento de voz (STT - Speech-to-Text) en la extensión Pupil. Actúa como un puente entre tu navegador y el servidor local, permitiendo la captura y transmisión de audio en tiempo real. Mantén esta pestaña abierta en segundo plano mientras usas la extensión para que el reconocimiento de voz funcione correctamente.</p>
+				<p>
+					Esta página web es necesaria para habilitar la funcionalidad de reconocimiento de voz (STT
+					- Speech-to-Text) en la extensión Pupil. Actúa como un puente entre tu navegador y el
+					servidor local, permitiendo la captura y transmisión de audio en tiempo real. Mantén esta
+					pestaña abierta en segundo plano mientras usas la extensión para que el reconocimiento de
+					voz funcione correctamente.
+				</p>
 				<h2>Compatibilidad del Navegador</h2>
-				<p>El reconocimiento de voz (STT) no está disponible en todos los navegadores. Si aparece deshabilitado, verifica la compatibilidad en <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Speech_API#browser_compatibility" target="_blank">MDN Web Docs</a>.</p>
+				<p>
+					El reconocimiento de voz (STT) no está disponible en todos los navegadores. Si aparece
+					deshabilitado, verifica la compatibilidad en
+					<a
+						href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Speech_API#browser_compatibility"
+						target="_blank"
+						>MDN Web Docs</a
+					>.
+				</p>
 			</div>
 			<div class="right-panel">
 				<div class="control-section">
